chore: drop CodedException in proxy, work in progress
Refs: XRDDEV-2960